completed the API with missing attrs and added headers
